# syskern

./: .cz.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  1ndocker  AGENTS.md  Makefile  README.md  docker-compose.yml
.claude/: launch.json
backend/: .dockerignore  .env.example  .env.native.example  Dockerfile  Dockerfile.beat  Dockerfile.worker  docker-entrypoint.sh  manage.py  pyproject.toml
backend/apps/accounts/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/attributes/: __init__.py  admin.py  apps.py  models.py  seeds.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/attributes/migrations/: 0001_initial.py  0002_alter_attributeregistry_code.py  0003_seed_minimal_attributes.py  0004_attributeregistry_is_filterable.py  0005_attributeregistry_default_value.py
backend/apps/attributes/services/: backfill.py
backend/apps/attributes/tests/: test_api.py  test_backfill.py  test_models.py  test_serializers.py
backend/apps/clients/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/clients/migrations/: 0001_initial.py
backend/apps/core/: admin.py  apps.py  authentication.py  dashboard.py  health.py  http_ssl.py  logging.py  models.py  pagination.py  permissions.py  rate_limit.py  urls.py  views.py
backend/apps/core/tests/: test_dashboard.py  test_health.py  test_http_ssl.py  test_logging_redaction.py  test_rate_limit.py
backend/apps/data_migration/: __init__.py  admin.py  apps.py  derivations.py  filters.py  locking.py  models.py  orchestrator.py  report.py  reset.py  serializers.py  steps.py  urls.py  views.py
backend/apps/data_migration/loaders/: __init__.py  base.py  eav.py  exceptions.py  io.py  loader_po_ayp.py  loader_po_fournisseurs.py  loader_po_infoks.py  loader_po_mirsan.py  loader_technique.py  matching.py  types.py
backend/apps/data_migration/migrations/: 0001_initial.py  0002_migrationunmatched_resolution_action.py
backend/apps/data_migration/tests/: test_base_loader.py  test_bootstrap_catalog.py  test_derivations.py  test_loader_ayp_grid.py  test_loader_po_ayp.py  test_loader_po_fournisseurs.py  test_loader_po_infoks.py  test_loader_po_mirsan.py  test_loader_technique.py  test_matching.py  test_matching_performance.py  test_orchestrator.py  test_quarantine_api.py  test_report.py  test_reset.py
backend/apps/documents/: admin.py  apps.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/documents/migrations/: 0001_initial.py  0002_documentlibrary_deleted_at_documentlibrary_file_name_and_more.py  0003_purge_periodic_task.py
backend/apps/documents/tests/: test_library.py
backend/apps/i18n/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/i18n/migrations/: 0001_initial.py  0002_purge_periodic_task.py
backend/apps/i18n/tests/: test_cache_service.py  test_deepl_client.py  test_translate_endpoint.py
backend/apps/market/: __init__.py  admin.py  apps.py  models.py  seeds.py  serializers.py  urls.py  views.py
backend/apps/market/migrations/: 0001_initial.py  0002_create_incoterms.py  0003_seed_reference_data.py  0004_marketparameter_source_and_index.py  0005_transport_presets.py  0006_transport_preset_unified.py  0007_remove_transportpreset_is_system.py
backend/apps/market/tests/: test_models.py  test_seed.py  test_seed_client_market_params.py  test_transport_presets.py
backend/apps/odoo_sync/: __init__.py  admin.py  apps.py  models.py  schemas.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/odoo_sync/adapters/: _rpc.py  base.py  factory.py  v16.py  v19.py
backend/apps/odoo_sync/migrations/: 0001_initial.py  0002_daily_sync_periodic_task.py  0003_hourly_retry_failed_pushes.py
backend/apps/odoo_sync/services/: push.py  runner.py
backend/apps/odoo_sync/tests/: test_adapters.py  test_product_enrichment.py  test_supplier_sync.py  test_sync_trigger.py
backend/apps/offers/: __init__.py  admin.py  apps.py  dashboard_metrics.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/offers/migrations/: 0001_initial.py  0002_offer_ai_arguments_offer_generation_error_and_more.py  0003_expiration_periodic_task.py  0004_offeralertconfig.py  0005_reap_stuck_periodic_task.py  (+1 more)
backend/apps/products/: admin.py  apps.py  exports.py  filters.py  models.py  ordering.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/simulations/: __init__.py  admin.py  apps.py  exports.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/suppliers/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  services_import.py  tasks.py  urls.py  views.py
backend/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py
backend/docs/: odoo-mapping.md  odoo_investigation_report.md
backend/migration_sources/: LAN_CABLE_PRICE_LIST_2021_-_DEC_2025_(2).xlsx  README.md  UKN_RANGE_PRICES_DECEMBER_2025_-_Q1_2026_v2_(avec_copper_adjust).xlsx
backend/scripts/: check_sync_quality.py  inspect_certs.sh  inspect_purchases_partners.py  inspect_real_product.py  probe_v19_body.py  probe_v19_db.py  probe_v19_endpoints.py  probe_v19_url.py  run_sync.py  spike_odoo_volumetry.py  test_adapters.py  volumetry_v16.py
(+374 files in other folders)
