[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syskern-backend"
version = "0.1.0"
description = "Syskern Pricing Platform — Django backend"
requires-python = ">=3.12,<3.14"

dependencies = [
    # ─── Core ──────────────────────────────────────────────
    "Django>=5.0,<5.2",
    "djangorestframework>=3.15,<3.16",
    "django-cors-headers>=4.3",
    "django-filter>=24.2",
    "django-environ>=0.11",
    "drf-spectacular>=0.27",
    # ─── DB driver ─────────────────────────────────────────
    "psycopg[binary]>=3.1,<4",
    # ─── Auth (Supabase JWT verification in prod) ──────────
    "PyJWT[crypto]>=2.8",
    # ─── Background jobs ───────────────────────────────────
    "celery[redis]>=5.4",
    "django-celery-beat>=2.6",
    # ─── HTTP clients (Odoo / Gamma / DeepL / OpenAI) ──────
    "httpx>=0.27",
    # ─── Data tooling ──────────────────────────────────────
    "pandas>=2.2",
    "openpyxl>=3.1",
    "Babel>=2.14",
    # ─── Production server ─────────────────────────────────
    "gunicorn>=22.0",
    "whitenoise>=6.6",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.20",
    "django-extensions>=3.2",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "ruff>=0.5",
    "mypy>=1.10",
    "django-stubs[compatible-mypy]>=5.0",
]

[tool.setuptools]
# This project ships a Django app server — it isn't a library and doesn't
# need to be installed as a Python package.  Declaring empty packages /
# py-modules makes `pip install .` install only the runtime dependencies
# declared above.  The source code is then run via `manage.py` from /app.
packages = []
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "DJ", "SIM"]
ignore = ["E501"]  # line length is handled by formatter

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict_optional = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.local"
